zta/microservice2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zta-microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zta-microservice2
  template:
    metadata:
      labels:
        app: zta-microservice2
    spec:
      containers:
      - name: zta-microservice2
        image: b0rkemborina/zta-cybersec-suite:ztamicroservice2
        ports:
        - containerPort: 8081
