zta/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zta-microservice2
spec:
  selector:
    app: zta-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
