zta/microservice2/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zta-microservice2
spec:
  selector:
    matchLabels:
      app: zta-microservice2
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/zta-microservice5"
        ]
